@@ -55,6 +55,25 @@ protected:
 };
    
 
+/**
+ * The AbortException is thrown if a pending operation was aborted.
+ * @author Werner Mayer
+ */
+class BaseExport AbortException : public Exception
+{
+public:
+  /// Construction
+	AbortException(const char * sMessage);
+  /// Construction
+  AbortException();
+  /// Construction
+  AbortException(const AbortException &inst);
+  /// Destruction
+  virtual ~AbortException() throw() {}
+  /// Description of the exception
+  virtual const char* what() const throw();
+};
+
 
 inline void Exception::SetMessage(const char * sMessage)
 {
