@@ -163,7 +163,7 @@ MeshFeaturePy::~MeshFeaturePy()           // Everything handled in parent
 PyObject *MeshFeaturePy::_repr(void)
 {
   std::stringstream a;
-  a << "MeshFeature: [ ";
+  a << _pcFeature->type() << " feature: [ ";
   a << "]" << std::endl;
   return Py_BuildValue("s", a.str().c_str());
 }
